@@ -14,6 +14,7 @@
 
 		<ul>
 			<li>MSF RPC code by scriptjunkie (BSD license)</li>
+			<li>JYaml (BSD license)</li>
 			<li>JGraph by JGraph Ltd. (BSD license)</li>
 		</ul>
 
